# spotifylingo

./: LICENSE  README.md  diagram.puml  pyproject.toml
scripts/: fetch_top_tracks.py
src/spotify_vocab/: config.py  language_filter.py  lyrics_fetcher.py  lyrics_provider.py  lyrics_provider_dummy.py  lyrics_provider_genius.py  models.py  spotify_client.py  track_selection.py
src/spotify_vocab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
